[gd_scene load_steps=10 format=3 uid="uid://dsyv6apthhnrb"]

[ext_resource type="Texture2D" uid="uid://51os5d5sxjix" path="res://assets/attacks/flurry-of-blades/FX000_nyknck/01.png" id="1_5qvd7"]
[ext_resource type="Script" path="res://scripts/attacks/flurry_of_blades.gd" id="1_fniol"]
[ext_resource type="Texture2D" uid="uid://blyk46edknirs" path="res://assets/attacks/flurry-of-blades/FX000_nyknck/02.png" id="2_asq21"]
[ext_resource type="Texture2D" uid="uid://by6aj2gsanf3y" path="res://assets/attacks/flurry-of-blades/FX000_nyknck/03.png" id="3_f77xd"]
[ext_resource type="Texture2D" uid="uid://bogmb04r1jt3m" path="res://assets/attacks/flurry-of-blades/FX000_nyknck/04.png" id="4_hiyqg"]
[ext_resource type="Texture2D" uid="uid://cf7q1numndnu2" path="res://assets/attacks/flurry-of-blades/FX000_nyknck/05.png" id="5_omfgm"]
[ext_resource type="Texture2D" uid="uid://quaykm6x06u" path="res://assets/attacks/flurry-of-blades/FX000_nyknck/06.png" id="6_gypoc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xew5r"]
size = Vector2(33, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_2xyri"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_5qvd7")
}, {
"duration": 1.0,
"texture": ExtResource("2_asq21")
}, {
"duration": 1.0,
"texture": ExtResource("3_f77xd")
}, {
"duration": 1.0,
"texture": ExtResource("4_hiyqg")
}, {
"duration": 1.0,
"texture": ExtResource("5_omfgm")
}, {
"duration": 1.0,
"texture": ExtResource("6_gypoc")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="flurry_of_blades" type="Area2D"]
position = Vector2(-3, -1)
scale = Vector2(1.30303, 1.16286)
collision_layer = 16
collision_mask = 4
script = ExtResource("1_fniol")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_xew5r")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2xyri")
autoplay = "default"
frame = 5
frame_progress = 1.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
